[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "urt30arcon"
authors = [{name = "Urt Thirtyplus", email = "urt30plus@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Quake3", "RCON"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/urt30plus/urt30arcon"
Source = "https://github.com/urt30plus/urt30arcon"

[tool.mypy]
packages = ["urt30arcon"]
strict = true
warn_unreachable = true

[tool.ruff]
target-version = "py311"
extend-exclude = [".*"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    "A",  # shadowing builtins
    "ARG",  # unused arguments
    "ASYNC",  # async checks
    "B",  # bugbear
    "C4",  # comprehensions
    "DTZ",  # checks for naive datetimes
    "E",  # pycodestyle (errors)
    "ERA",  # eradicate (commented out code)
    "F",  # Pyflakes
    "FBT",  # boolean trap
    "I",   # isort
    "ISC",  # Implicit String Concat
    "N",  # pep8-naming
    "PIE",  # misc lints
    "PL",  # Pylint
    "PT",  # Pytest
    "PTH",  # favor pahtlib.Path
    "RET",  # returns
    "RUF",  # Ruff-specific rules
    "S",  # bandit
    "SIM",  # simplify
    "T20",  # print statements
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle (warnings)
]
ignore = ["ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["E501", "PLR2004", "S101"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.lint.pylint]
max-args = 8
