[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "urt30arcon"
authors = [{name = "Urt Thirtyplus", email = "urt30plus@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Quake3", "RCON"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
]
requires-python = ">=3.12"
dependencies = []
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/urt30plus/urt30arcon"
Source = "https://github.com/urt30plus/urt30arcon"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.4",
]

[tool.mypy]
packages = ["urt30arcon"]
strict = true
warn_unreachable = true

[tool.ruff]
target-version = "py312"
extend-exclude = [".*"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    "A",  # shadowing builtins
    "ARG",  # unused arguments
    "ASYNC",  # async checks
    "B",  # bugbear
    "C4",  # comprehensions
    "DTZ",  # checks for naive datetimes
    "E",  # pycodestyle (errors)
    "ERA",  # eradicate (commented out code)
    "F",  # Pyflakes
    "FBT",  # boolean trap
    "FURB",  # refurb
    "I",   # isort
    "ISC",  # Implicit String Concat
    "LOG",  # logging checks
    "N",  # pep8-naming
    "PIE",  # misc lints
    "PL",  # Pylint
    "PT",  # Pytest
    "PTH",  # favor pahtlib.Path
    "RET",  # returns
    "RUF",  # Ruff-specific rules
    "S",  # bandit
    "SIM",  # simplify
    "T20",  # print statements
    "TC",  # type checking
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle (warnings)
]
ignore = ["ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "E501",  # Line too long
    "PLR2004",  # Magic value used in comparison
    "S101",  # Use of assert
]
