[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "urt30arcon"
module-root = ""

[project]
name = "urt30arcon"
version = "1.2.4.dev1"
description = "Quake3 Async RCON Client"
authors = [{name = "Urt Thirtyplus", email = "urt30plus@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Quake3", "RCON"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Home = "https://github.com/urt30plus/urt30arcon"
Source = "https://github.com/urt30plus/urt30arcon"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ty>=0.0.19",
]

[tool.mypy]
packages = ["urt30arcon"]
strict = true
warn_unreachable = true

[tool.ruff]
target-version = "py313"
extend-exclude = [".*"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    "A",  # shadowing builtins
    "ARG",  # unused arguments
    "ASYNC",  # async checks
    "B",  # bugbear
    "C4",  # comprehensions
    "DTZ",  # checks for naive datetimes
    "E",  # pycodestyle (errors)
    "ERA",  # eradicate (commented out code)
    "F",  # Pyflakes
    "FBT",  # boolean trap
    "FURB",  # refurb
    "I",   # isort
    "ISC",  # Implicit String Concat
    "LOG",  # logging checks
    "N",  # pep8-naming
    "PIE",  # misc lints
    "PL",  # Pylint
    "PT",  # Pytest
    "PTH",  # favor pahtlib.Path
    "RET",  # returns
    "RUF",  # Ruff-specific rules
    "S",  # bandit
    "SIM",  # simplify
    "T20",  # print statements
    "TC",  # type checking
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle (warnings)
]
ignore = ["ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "E501",  # Line too long
    "PLR2004",  # Magic value used in comparison
    "S101",  # Use of assert
]
